updated log regress and added gitignore

--- a/ipython_notebooks/Introduction to Machine Learning - Logistic Regression.ipynb
+++ b/ipython_notebooks/Introduction to Machine Learning - Logistic Regression.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "import pandas\n",
+    "import pandas as pd\n",
     "import numpy\n",
     "import scipy\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -45,7 +45,7 @@
     "url = \"http://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/breast-cancer-wisconsin.data\"\n",
     "names=['code', 'cl_thick', 'c_size', 'c_shape', 'marg_adh', 's_ep_c_size', \n",
     "       'b_nuclei', 'b_chromatin', 'n_nucleoli', 'mitoses', 'diag'] \n",
-    "data = pandas.read_csv(url, names=names)\n",
+    "data = pd.read_csv(url, names=names)\n",
     "array = data.values"
    ]
   },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -160,22 +160,22 @@
        "</div>"
       ],
       "text/plain": [
-       "      code  cl_thick  c_size  c_shape  marg_adh  s_ep_c_size b_nuclei  \\\n",
-       "0  1000025         5       1        1         1            2        1   \n",
-       "1  1002945         5       4        4         5            7       10   \n",
-       "2  1015425         3       1        1         1            2        2   \n",
-       "3  1016277         6       8        8         1            3        4   \n",
-       "4  1017023         4       1        1         3            2        1   \n",
+       "      code  cl_thick  c_size  c_shape  marg_adh  s_ep_c_size b_nuclei  b_chromatin  n_nucleoli  \\\n",
+       "0  1000025         5       1        1         1            2        1            3           1   \n",
+       "1  1002945         5       4        4         5            7       10            3           2   \n",
+       "2  1015425         3       1        1         1            2        2            3           1   \n",
+       "3  1016277         6       8        8         1            3        4            3           7   \n",
+       "4  1017023         4       1        1         3            2        1            3           1   \n",
        "\n",
-       "   b_chromatin  n_nucleoli  mitoses  diag  \n",
-       "0            3           1        1     2  \n",
-       "1            3           2        1     2  \n",
-       "2            3           1        1     2  \n",
-       "3            3           7        1     2  \n",
-       "4            3           1        1     2  "
+       "   mitoses  diag  \n",
+       "0        1     2  \n",
+       "1        1     2  \n",
+       "2        1     2  \n",
+       "3        1     2  \n",
+       "4        1     2  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -289,22 +289,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   cl_thick  c_size  c_shape  marg_adh  s_ep_c_size b_nuclei  b_chromatin  \\\n",
-       "0         5       1        1         1            2        1            3   \n",
-       "1         5       4        4         5            7       10            3   \n",
-       "2         3       1        1         1            2        2            3   \n",
-       "3         6       8        8         1            3        4            3   \n",
-       "4         4       1        1         3            2        1            3   \n",
+       "   cl_thick  c_size  c_shape  marg_adh  s_ep_c_size b_nuclei  b_chromatin  n_nucleoli  mitoses  \\\n",
+       "0         5       1        1         1            2        1            3           1        1   \n",
+       "1         5       4        4         5            7       10            3           2        1   \n",
+       "2         3       1        1         1            2        2            3           1        1   \n",
+       "3         6       8        8         1            3        4            3           7        1   \n",
+       "4         4       1        1         3            2        1            3           1        1   \n",
        "\n",
-       "   n_nucleoli  mitoses  diag  \n",
-       "0           1        1     2  \n",
-       "1           2        1     2  \n",
-       "2           1        1     2  \n",
-       "3           7        1     2  \n",
-       "4           1        1     2  "
+       "   diag  \n",
+       "0     2  \n",
+       "1     2  \n",
+       "2     2  \n",
+       "3     2  \n",
+       "4     2  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -334,7 +334,7 @@
        "(699, 10)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -384,8 +384,8 @@
     }
    ],
    "source": [
-    "pandas.set_option('display.width', 100)\n",
-    "pandas.set_option('precision', 3)\n",
+    "pd.set_option('display.width', 100)\n",
+    "pd.set_option('precision', 3)\n",
     "description = data.describe()\n",
     "print(description)"
    ]
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -420,7 +420,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -449,13 +449,13 @@
        "array(['1', '10', '2', '4', '3', '9', '7', '?', '5', '8', '6'], dtype=object)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pandas.unique(data.b_nuclei.ravel())"
+    "pd.unique(data.b_nuclei.ravel())"
    ]
   },
   {
@@ -468,7 +468,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#data.b_nuclei.replace(['?'],['-1'],inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#Convert the '?' to some easily identified value that can be converted to an integer\n",
+    "data['b_nuclei'] = data['b_nuclei'].apply(lambda x: x if x != '?' else '-1')\n",
+    "#convert the column to an integer\n",
+    "data.b_nuclei = data.b_nuclei.astype('int')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean of the column is: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#get the mean of all of the values, EXCEPT for the value that we used in place of the '?'\n",
+    "mean = int(round(data[data.b_nuclei != -1].b_nuclei.mean()))\n",
+    "print('The mean of the column is: ' + str(mean))\n",
+    "data['b_nuclei'] = data['b_nuclei'].apply(lambda x: x if x != -1 else mean)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we take another look at all of the unique values in the b_nuclei column, we can see that '?' is gone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -476,10 +530,62 @@
     {
      "data": {
       "text/plain": [
-       "array([ 1, 10,  2,  4,  3,  9,  7,  5,  8,  6])"
+       "array([ 1, 10,  2,  4,  3,  9,  7,  5,  8,  6], dtype=int64)"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.unique(data.b_nuclei.ravel())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dx = data\n",
+    "#Convert the '?' to some easily identified value that can be converted to an integer\n",
+    "dx['b_nuclei'] = dx['b_nuclei'].apply(lambda x: x if x != '?' else '-1')\n",
+    "dx.head(50)\n",
+    "#convert the column to an integer\n",
+    "dx.b_nuclei = dx.b_nuclei.astype('int')\n",
+    "#get the mean of all of the values, EXCEPT for the value that we used in place of the '?'\n",
+    "mean = int(round(dx[dx.b_nuclei != -1].b_nuclei.mean()))\n",
+    "print(mean)\n",
+    "dx['b_nuclei'] = dx['b_nuclei'].apply(lambda x: x if x != -1 else mean)\n",
+    "pd.unique(dx.b_nuclei.ravel())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1, 10,  2,  4,  3,  9,  7,  5,  8,  6], dtype=int64)"
+      ]
+     },
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
