working up to b_nuclei convert to integer mean

--- a/ipython_notebooks/Introduction to Machine Learning - Logistic Regression.ipynb
+++ b/ipython_notebooks/Introduction to Machine Learning - Logistic Regression.ipynb
@@ -550,17 +550,17 @@
    },
    "outputs": [],
    "source": [
-    "dx = data\n",
-    "#Convert the '?' to some easily identified value that can be converted to an integer\n",
-    "dx['b_nuclei'] = dx['b_nuclei'].apply(lambda x: x if x != '?' else '-1')\n",
-    "dx.head(50)\n",
-    "#convert the column to an integer\n",
-    "dx.b_nuclei = dx.b_nuclei.astype('int')\n",
-    "#get the mean of all of the values, EXCEPT for the value that we used in place of the '?'\n",
-    "mean = int(round(dx[dx.b_nuclei != -1].b_nuclei.mean()))\n",
-    "print(mean)\n",
-    "dx['b_nuclei'] = dx['b_nuclei'].apply(lambda x: x if x != -1 else mean)\n",
-    "pd.unique(dx.b_nuclei.ravel())"
+    "# dx = data\n",
+    "# #Convert the '?' to some easily identified value that can be converted to an integer\n",
+    "# dx['b_nuclei'] = dx['b_nuclei'].apply(lambda x: x if x != '?' else '-1')\n",
+    "# dx.head(50)\n",
+    "# #convert the column to an integer\n",
+    "# dx.b_nuclei = dx.b_nuclei.astype('int')\n",
+    "# #get the mean of all of the values, EXCEPT for the value that we used in place of the '?'\n",
+    "# mean = int(round(dx[dx.b_nuclei != -1].b_nuclei.mean()))\n",
+    "# print(mean)\n",
+    "# dx['b_nuclei'] = dx['b_nuclei'].apply(lambda x: x if x != -1 else mean)\n",
+    "# pd.unique(dx.b_nuclei.ravel())"
    ]
   },
   {
