--- a/ipython_notebooks/Introduction to Machine Learning - Logistic Regression.ipynb
+++ b/ipython_notebooks/Introduction to Machine Learning - Logistic Regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import the necessary modules"
+    "## Import the necessary modules"
    ]
   },
   {
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Retrieve necessary data and load into Pandas DataFrame"
+    "## Retrieve necessary data and load into Pandas DataFrame"
    ]
   },
   {
@@ -685,18 +685,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It looks like c_size 0, c_shape, and b_nuclei have the strongest correlation with the diagnosis while marg_adh and mitoes have the\n",
-    "least strong correlation (numbers taken from the printed correlation above). "
+    "It looks like c_size (0.818), c_shape (0.819), and b_nuclei (0.815) have the strongest correlation with the diagnosis while marg_adh (0.697) and mitoes (0.423) have the least strong correlation (numbers taken from the printed correlation above). "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For now, since this is a small dataset and all of the correlations are \"pretty good\" we will keep all of them for now and look at the accuracy of our model. "
+   ]
   },
   {
    "cell_type": "code",
