--- a/ipython_notebooks/Introduction to Machine Learning - Logistic Regression.ipynb
+++ b/ipython_notebooks/Introduction to Machine Learning - Logistic Regression.ipynb
@@ -696,13 +696,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "The next step is to look at the accuracy of our model."
+   ]
   },
   {
    "cell_type": "code",
