added data source citation

--- a/ipython_notebooks/Introduction to Machine Learning - Logistic Regression.ipynb
+++ b/ipython_notebooks/Introduction to Machine Learning - Logistic Regression.ipynb
@@ -54,6 +54,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Please note that this data is publicly available from the UCI Machine Learning Repository. Access to the dataset and details of the dataset are avilable here: https://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+%28Diagnostic%29"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Take an initial look at the data"
    ]
   },
