added hackerrank notebook, updated gitignore to ignore data folder

--- a/ipython_notebooks/Test Seizure.ipynb
+++ b/ipython_notebooks/Test Seizure.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -135,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -145,18 +154,95 @@
      "output_type": "stream",
      "text": [
       "1000\n",
-      "1000\n"
+      "1000\n",
+      "670\n",
+      "330\n",
+      "670\n",
+      "330\n"
      ]
     }
    ],
    "source": [
-    "print(len(X_files))\n",
-    "print(len(y))"
+    "print(len(X_files)) #just file names\n",
+    "print(len(y))\n",
+    "print(len(X_train_files)) #file names\n",
+    "print(len(X_test_files)) #file names\n",
+    "print(len(y_train)) #binary values\n",
+    "print(len(y_test)) #binary values\n",
+    "\n",
+    "#print(y_train[:5])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_X_from_files_data(base_dir, filename, show_progress=True):\n",
+    "    output = None\n",
+    "    n = 128\n",
+    "    mat_data = scipy.io.loadmat(''.join([base_dir, filename]))\n",
+    "    data = mat_data['dataStruct'][0][0][0]\n",
+    "    print(data)\n",
+    "    x_fft = rfft(data, n=n, axis=0)\n",
+    "    #print(x_fft)\n",
+    "    output = np.vstack([output, x_fft]) if output is not None else x_fft\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#X_train_see = get_X_from_files(base_dir=base, files=X_train_files[:1])\n",
+    "fname1 = X_train_files[:1][0]\n",
+    "#print(fname1)\n",
+    "fname2 = '1_3_1.mat'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  3.08377228e+02   7.61208130e+02  -3.33036377e+02 ...,   3.02578064e+02\n",
+      "   -1.03572375e+03   9.08074341e+02]\n",
+      " [ -1.12125854e+03  -8.55451355e+02  -2.88266846e+03 ...,   5.86717529e+03\n",
+      "    4.26075781e+03  -3.96341992e+03]\n",
+      " [ -3.25292627e+03  -2.72353223e+03  -3.32947803e+03 ...,  -7.94843262e+03\n",
+      "    5.92156494e+03   1.21478748e+03]\n",
+      " ..., \n",
+      " [  2.46030884e+01   4.97979736e+00   5.21492920e+01 ...,   4.72304688e+01\n",
+      "    2.93537598e+01   2.83518066e+01]\n",
+      " [ -3.22143555e+01  -2.00600586e+01  -1.67559814e+01 ...,  -8.17927246e+01\n",
+      "   -2.51879883e+01   1.11975098e+00]\n",
+      " [  3.90364075e+01   3.12818604e+01   5.64648590e+01 ...,   7.82789307e+01\n",
+      "    1.71020508e-01   6.06293030e+01]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 128\n",
+    "res = get_X_from_files_data(base_dir=base, filename=fname1)\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -175,7 +261,7 @@
       "%70: Loading file 1_629_0.mat\n",
       "%80: Loading file 1_342_0.mat\n",
       "%90: Loading file 1_140_0.mat\n",
-      "Wall time: 2min 4s\n",
+      "Wall time: 4min 30s\n",
       "%0: Loading file 1_361_0.mat\n",
       "%10: Loading file 1_343_0.mat\n",
       "%20: Loading file 1_479_0.mat\n",
@@ -186,7 +272,7 @@
       "%70: Loading file 1_74_1.mat\n",
       "%80: Loading file 1_227_0.mat\n",
       "%90: Loading file 1_286_0.mat\n",
-      "Wall time: 1min 4s\n",
+      "Wall time: 1min 53s\n",
       "X_train shape: (85760L, 16L) - y_train shape: (670L,)\n",
       "X_test shape: (42240L, 16L) - y_test shape: (330L,)\n"
      ]
@@ -201,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -228,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -236,29 +322,29 @@
     {
      "data": {
       "text/plain": [
-       "array([[ -522.83203125, -2230.59814453,  1213.36413574, -6526.05859375,\n",
-       "        -1849.34411621,   460.59753418,  -730.86401367,  -184.24256897,\n",
-       "         -376.07785034,  2654.484375  ,   867.40881348,   770.71661377,\n",
-       "         2509.0925293 ,  3169.86572266,   835.84240723,   187.69282532],\n",
-       "       [ 1018.17175293,  1230.95703125,  -809.96130371, -1067.27197266,\n",
-       "        -2720.84667969, -2980.80371094, -1877.52319336, -1476.08032227,\n",
-       "         2715.11450195,  1885.99450684,  -581.54443359,    79.69972229,\n",
-       "         -655.93640137,  6191.70214844,   748.34313965, -2019.03833008],\n",
-       "       [-1347.70117188,  -533.51928711,  -583.28344727, -1643.6887207 ,\n",
-       "           24.52093315, -1588.49865723,  2331.15161133,  -763.27905273,\n",
-       "        -1485.48095703,  -747.85113525,  2346.11181641, -1469.6229248 ,\n",
-       "         2892.92529297, -1577.02380371,  5108.41601562,  -907.89154053],\n",
-       "       [ -552.44030762,  -672.64904785,  -104.58300781,  1196.57897949,\n",
-       "          595.27740479,   298.974823  ,  -286.58587646,    36.76357269,\n",
-       "          604.27893066,  -650.30969238,   811.89367676,    90.24077606,\n",
-       "          161.20527649,  -980.30737305, -1101.83935547,   741.57275391],\n",
-       "       [-1585.11254883,  -353.49313354,  -309.75375366,   666.12536621,\n",
-       "        -1610.81994629,  -670.75842285, -1020.39276123,   -78.79224396,\n",
-       "         -273.1321106 , -1404.43432617,  -833.80596924,  -400.40039062,\n",
-       "          857.16149902,  4254.05566406,  2744.24316406,   107.6860199 ]], dtype=float32)"
+       "array([[  308.37722778,   761.20812988,  -333.03637695, -1329.16625977,\n",
+       "         1021.93902588,   508.41217041,  1463.21826172,   458.79901123,\n",
+       "         -120.94632721,  -580.20782471,  -314.07348633,  -213.30230713,\n",
+       "        -1688.46362305,   302.57806396, -1035.72375488,   908.07434082],\n",
+       "       [-1121.25854492,  -855.45135498, -2882.66845703, -4577.93847656,\n",
+       "        -2770.00341797,  -347.56015015,  5068.32617188,  1703.92041016,\n",
+       "          532.19494629, -1839.23364258, -2710.484375  ,  -345.62872314,\n",
+       "         4111.14892578,  5867.17529297,  4260.7578125 , -3963.41992188],\n",
+       "       [-3252.92626953, -2723.53222656, -3329.47802734, -4080.19726562,\n",
+       "          265.92858887,  1673.14770508,  4734.2265625 ,   627.47485352,\n",
+       "        -2102.30712891, -1505.67260742,  3201.19262695,   264.6618042 ,\n",
+       "         7189.05273438, -7948.43261719,  5921.56494141,  1214.78747559],\n",
+       "       [  478.37713623,   680.8470459 ,   750.37316895,  -542.20751953,\n",
+       "         -965.28112793, -2325.27856445, -2823.27880859, -4091.0168457 ,\n",
+       "         1704.14807129,  2152.99072266,   -79.54701996,   783.31109619,\n",
+       "         1003.2253418 ,  6356.75878906, -2486.80908203,  -715.09265137],\n",
+       "       [ -985.39935303, -1300.71191406, -1178.29309082, -3282.06494141,\n",
+       "        -1653.44628906, -1148.47363281,  2099.67382812,  -608.73706055,\n",
+       "        -1241.56738281, -4773.95605469, -4348.66113281,   885.59838867,\n",
+       "         5884.49511719,  4924.1171875 ,  7446.07666016,  -490.38092041]], dtype=float32)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -280,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -291,7 +377,7 @@
        "array([ 0.,  1.,  0.,  1.,  0.])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -324,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -335,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -349,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -365,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -383,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -398,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -411,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -423,8 +509,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-75-249e1e645ad3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m#['r2','mean_absolute_error','mean_squared_error'] - regression metrics\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mscoring\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcross_val_scoring\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcross_validation_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_train\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m670\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkfold\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscoring\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[1;32mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-72-621a53c35d6a>\u001b[0m in \u001b[0;36mcross_validation_score\u001b[1;34m(mod, X, Y, kfold, scoring)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcross_validation_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmod\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkfold\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscoring\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mscore\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcross_validation\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcross_val_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmod\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mkfold\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscoring\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mscoring\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Scoring: %s; Accuracy: %.3f (%.3f)\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mscoring\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscore\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscore\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscore\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-19-249e1e645ad3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m#['r2','mean_absolute_error','mean_squared_error'] - regression metrics\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mscoring\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcross_val_scoring\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcross_validation_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_train\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m670\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkfold\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscoring\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[1;32mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-18-621a53c35d6a>\u001b[0m in \u001b[0;36mcross_validation_score\u001b[1;34m(mod, X, Y, kfold, scoring)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcross_validation_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmod\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkfold\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscoring\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mscore\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcross_validation\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcross_val_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmod\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mkfold\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscoring\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mscoring\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Scoring: %s; Accuracy: %.3f (%.3f)\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mscoring\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscore\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscore\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscore\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mC:\\Anaconda2\\lib\\site-packages\\sklearn\\cross_validation.pyc\u001b[0m in \u001b[0;36mcross_val_score\u001b[1;34m(estimator, X, y, scoring, cv, n_jobs, verbose, fit_params, pre_dispatch)\u001b[0m\n\u001b[0;32m   1431\u001b[0m                                               \u001b[0mtrain\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1432\u001b[0m                                               fit_params)\n\u001b[1;32m-> 1433\u001b[1;33m                       for train, test in cv)\n\u001b[0m\u001b[0;32m   1434\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1435\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mC:\\Anaconda2\\lib\\site-packages\\sklearn\\externals\\joblib\\parallel.pyc\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, iterable)\u001b[0m\n\u001b[0;32m    798\u001b[0m             \u001b[1;31m# was dispatched. In particular this covers the edge\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    799\u001b[0m             \u001b[1;31m# case of Parallel used with an exhausted iterator.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 800\u001b[1;33m             \u001b[1;32mwhile\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdispatch_one_batch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    801\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_iterating\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    802\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mC:\\Anaconda2\\lib\\site-packages\\sklearn\\externals\\joblib\\parallel.pyc\u001b[0m in \u001b[0;36mdispatch_one_batch\u001b[1;34m(self, iterator)\u001b[0m\n\u001b[0;32m    656\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    657\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 658\u001b[1;33m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_dispatch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtasks\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    659\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    660\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
