--- a/ipython_notebooks/Hacker Rank - open email - with feature selection.ipynb
+++ b/ipython_notebooks/Hacker Rank - open email - with feature selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 131,
    "metadata": {
     "collapsed": true
    },
@@ -22,12 +22,13 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.feature_selection import SelectKBest\n",
-    "from sklearn import cross_validation"
+    "from sklearn import cross_validation\n",
+    "from sklearn.metrics import confusion_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 132,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 133,
    "metadata": {
     "collapsed": false
    },
@@ -416,7 +417,7 @@
        "[10 rows x 54 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 134,
    "metadata": {
     "collapsed": false
    },
@@ -441,7 +442,7 @@
        "(207424, 48)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 135,
    "metadata": {
     "collapsed": false
    },
@@ -470,7 +471,7 @@
        " 'open_time']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 136,
    "metadata": {
     "collapsed": false
    },
@@ -493,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 137,
    "metadata": {
     "collapsed": true
    },
@@ -505,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 138,
    "metadata": {
     "collapsed": true
    },
@@ -517,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 139,
    "metadata": {
     "collapsed": true
    },
@@ -528,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 140,
    "metadata": {
     "collapsed": false
    },
@@ -898,7 +899,7 @@
        "[10 rows x 47 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,20 +910,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 141,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "#cols = [col for col in data.columns if col not in ['opened']]\n",
+    "#print(cols)\n",
     "array = data.values\n",
-    "X = array[:,:]\n",
-    "Y = data['opened'].values"
+    "#X = array[:,:]\n",
+    "Y = data['opened'].values\n",
+    "data.drop('opened', axis=1, inplace=True)\n",
+    "X = data.values\n",
+    "#temp = data[cols]\n",
+    "\n",
+    "\n",
+    "#temp = data['~opened']\n",
+    "#temp.drop('opened', axis=1, inplace=True)\n",
+    "#X = temp.values[:,:]\n",
+    "#remove opened before assigning x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 142,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([u'mail_category', u'mail_type', u'sent_time', u'last_online', u'hacker_created_at',\n",
+       "       u'hacker_timezone', u'contest_login_count', u'contest_login_count_1_days',\n",
+       "       u'contest_login_count_30_days', u'contest_login_count_365_days',\n",
+       "       u'contest_login_count_7_days', u'contest_participation_count',\n",
+       "       u'contest_participation_count_1_days', u'contest_participation_count_30_days',\n",
+       "       u'contest_participation_count_365_days', u'contest_participation_count_7_days',\n",
+       "       u'forum_comments_count', u'forum_count', u'forum_expert_count', u'forum_questions_count',\n",
+       "       u'hacker_confirmation', u'ipn_count', u'ipn_count_1_days', u'ipn_count_30_days',\n",
+       "       u'ipn_count_365_days', u'ipn_count_7_days', u'ipn_read', u'ipn_read_1_days',\n",
+       "       u'ipn_read_30_days', u'ipn_read_365_days', u'ipn_read_7_days', u'submissions_count',\n",
+       "       u'submissions_count_1_days', u'submissions_count_30_days', u'submissions_count_365_days',\n",
+       "       u'submissions_count_7_days', u'submissions_count_contest',\n",
+       "       u'submissions_count_contest_1_days', u'submissions_count_contest_30_days',\n",
+       "       u'submissions_count_contest_365_days', u'submissions_count_contest_7_days',\n",
+       "       u'submissions_count_master', u'submissions_count_master_1_days',\n",
+       "       u'submissions_count_master_30_days', u'submissions_count_master_365_days',\n",
+       "       u'submissions_count_master_7_days'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
    "metadata": {
     "collapsed": true
    },
@@ -936,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {
     "collapsed": true
    },
@@ -950,11 +1001,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.69745911  0.65108528  0.64429585  0.65919144  0.65308096  0.64635326\n",
+      "  0.64337002  0.65721634  0.71253395  0.71660769]\n"
+     ]
+    }
+   ],
    "source": [
     "num_folds = 10\n",
     "num_instances = len(X)\n",
@@ -966,18 +1026,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scoring - Accuracy: 0.668 (0.027)\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Scoring - Accuracy: %.3f (%.3f)\") % (results.mean(), results.std())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {
     "collapsed": false
    },
@@ -985,10 +1053,247 @@
    "source": [
     "test_size = 0.33\n",
     "train_test_seed = 7\n",
-    "X_train, X_test, Y_train, Y_test = cross_val_score.train_test_split(X, Y, test_size=test_size, random_state=train_test_seed)\n",
+    "X_train, X_test, Y_train, Y_test = cross_validation.train_test_split(X, Y, test_size=test_size, random_state=train_test_seed)\n",
     "model.fit(X_train, Y_train)\n",
     "predicted = model.predict(X_test)\n",
     "matrix = confusion_matrix(Y_test, predicted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0 (Predicted)</th>\n",
+       "      <th>1 (Predicted)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0 (Actual)</th>\n",
+       "      <td>107344</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1 (Actual)</th>\n",
+       "      <td>52901</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            0 (Predicted)  1 (Predicted)\n",
+       "0 (Actual)         107344             60\n",
+       "1 (Actual)          52901             91"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(matrix, index=['0 (Actual)', '1 (Actual)'], columns=['0 (Predicted)', '1 (Predicted)'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "test_some_x = X[:500]\n",
+    "test_some_y = Y[:500]\n",
+    "test_some_predicted = model.predict(test_some_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test_some_predicted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 0 0 0 0 0 1 0 1 0 1 0 1 0 0 0 0 0 1 1 0 1 0 1 1 0 0 0 1 0 0 0 0 0 1 0 0\n",
+      " 0 0 1 1 0 0 0 1 0 0 1 0 0 0 1 0 0 0 0 1 1 0 0 1 0 1 0 0 0 0 1 0 1 0 0 0 0\n",
+      " 1 0 0 1 0 0 0 0 0 1 0 0 0 0 1 0 1 0 1 1 0 0 0 0 0 0 1 0 1 1 0 0 0 0 1 1 1\n",
+      " 0 0 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 1 0\n",
+      " 0 0 0 1 0 1 0 0 0 1 0 1 0 0 0 1 1 0 0 0 1 0 0 0 0 0 0 0 0 1 1 0 0 0 0 0 1\n",
+      " 1 1 0 0 0 1 0 0 0 1 1 1 0 0 0 0 0 0 0 1 0 0 1 1 0 0 1 0 0 1 1 0 0 1 0 0 0\n",
+      " 1 0 1 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 1 1 0 0 0 1 0 0 0 0 1 0 1 0 0 0 0 0 0\n",
+      " 0 0 0 0 1 1 1 0 0 1 0 0 0 1 0 0 1 1 0 0 0 1 0 0 1 1 0 0 0 0 1 0 0 0 0 0 0\n",
+      " 1 1 0 0 0 1 0 0 1 0 0 0 1 0 0 0 0 0 1 0 0 1 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0\n",
+      " 1 0 1 1 0 0 0 0 1 0 1 0 1 1 0 1 1 1 0 0 0 0 0 0 0 0 0 0 1 1 0 1 0 1 1 0 0\n",
+      " 1 0 0 1 0 0 0 0 0 0 1 1 1 0 0 1 1 1 0 1 0 0 1 1 0 1 1 0 0 0 0 0 0 1 0 0 1\n",
+      " 0 0 0 0 0 0 1 0 0 0 1 1 0 0 1 0 0 1 0 0 1 0 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0\n",
+      " 1 0 0 0 1 0 0 1 1 0 0 0 0 0 1 0 0 1 0 1 0 0 1 0 0 0 1 1 0 1 0 0 1 0 0 0 0\n",
+      " 0 0 1 1 0 1 0 1 0 0 0 0 0 0 0 1 0 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test_some_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "486048\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "test_data['mail_category'] = pd.Categorical(test_data.mail_category).codes\n",
+    "test_data['mail_type'] = pd.Categorical(test_data.mail_type).codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_data.hacker_confirmation = test_data.hacker_confirmation.astype('int')\n",
+    "test_data.fillna(0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#list(set(data.columns) - set(test_data.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "test_predicted = model.predict(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test_predicted[:1000])"
    ]
   }
  ],
