compare data shapes

--- a/ipython_notebooks/Hacker Rank - open email - with feature selection - WORKING.ipynb
+++ b/ipython_notebooks/Hacker Rank - open email - with feature selection - WORKING.ipynb
@@ -1370,6 +1370,50 @@
     "#test_predicted_df.head(30)     \n",
     "test_predicted_df.to_csv('df_open_email_test_output_65.csv', header=False, index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(207424, 1)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_predicted_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(207424, 46)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data.shape"
+   ]
   }
  ],
  "metadata": {
