--- a/ipython_notebooks/Hacker Rank - open email - with feature selection - WORKING.ipynb
+++ b/ipython_notebooks/Hacker Rank - open email - with feature selection - WORKING.ipynb
@@ -1125,6 +1125,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.77      0.88      0.82    107404\n",
+      "          1       0.66      0.46      0.55     52992\n",
+      "\n",
+      "avg / total       0.73      0.75      0.73    160396\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "report = classification_report(Y_test, predicted)\n",
+    "print(report)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {
     "collapsed": false
