added otto product

--- a/ipython_notebooks/Kaggle - leaves.ipynb
+++ b/ipython_notebooks/Kaggle - leaves.ipynb
@@ -1,13 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.kaggle.com/jeffd23/leaf-classification/10-classifier-showdown-in-scikit-learn/notebook"
+   ]
   },
   {
    "cell_type": "code",
